@@ -1,0 +1,31 @@
+/**
+* Podcast Manager for Joomla!
+*
+* @copyright	Copyright (C) 2011 Michael Babker. All rights reserved.
+* @license		GNU/GPL - http://www.gnu.org/copyleft/gpl.html
+* 
+* Podcast Manager is based upon the ideas found in Podcast Suite created by Joe LeBlanc
+* Original copyright (c) 2005 - 2008 Joseph L. LeBlanc and released under the GPLv2 license
+*/
+
+#cpanel > p {
+	font-size: 12px;
+	padding: 5px;
+}
+
+.cpanel-component .pane-slider div {
+	padding: 5px;
+}
+
+.cpanel-component .pane-slider div ul li {
+	list-style: disc outside none;
+	margin-left: 20px;
+}
+
+.podMan-header {
+	font-size: 14pt;
+}
+
+.divider {
+	border: 1px dotted #000000;
+}
